2003-03-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/lsearch.n:	Altered documentation of -ascii options so
	* doc/lsort.n:		they don't specify that they operate on
				ASCII strings, which they never did
				anyway.  [Bug #703807]

2003-03-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdAH.c (Tcl_FileObjCmd): Remove assumption that file
	times and longs are the same size.  [Bug #698146]
	(Tcl_FormatObjCmd): Stop surprising type conversions from
	happening when working with integer and wide values.  [Bug #699060]

	* generic/tclCmdAH.c (Tcl_FormatObjCmd): Only add the modifier
	that indicates we've got a wide int when we're formatting in an
	integer style.  Stops some libc's from going mad.  [Bug #702622]
	Also tidied whitespace.

2003-03-13  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/makefile.vc: Backed the version to 8.4 on the 8.4 branch.
	(I just loathe sticky tags).
	
2003-03-12  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	Removed TCL_PREFIX_IDENT and TCL_DEBUG_IDENT
	* win/tclWinPipe.c:	from tcl.h -- they are not part of Tcl's
	public interface.  Put them in win/tclWinPipe.c where they are used.

	* generic/tclCmdMZ.c (Tcl_SubstObj):	Corrected and added test for
	* tests/subst.test (subst-2.4):		Tcl_SubstObj's incorrect
	halting of substitution at the first \x00 byte.  [Bug 685106]

	* generic/tclInterp.c (Tcl_InterpObjCmd):	Corrected and added
	* tests/interp.test (interp-2.13):  		test for option
	parsing beyond objc for [interp create --].  Thanks to Marco Maggi.
	[Bug 702383]

2003-03-11  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/makefile.vc: Added two missing uses of $(DBGX) so that
	tclpip8x.dll loads without panicking on Win9x.
	
2003-03-08  Don Porter  <dgp@users.sourceforge.net>

        * doc/tcltest.n:  Added missing "-body" to example.  Thanks to
        Helmut Giese.  [Bug 700011]

2003-03-06  Don Porter	<dgp@users.sourceforge.net>
